force-app/main/default/objects/COMM_ContactUsEmailMapping__mdt/COMM_ContactUsEmailMapping__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata definition with email mappings for Contact Us Case process.</description>
    <label>Contact Us Email Mapping</label>
    <pluralLabel>Contact Us Email Mappings</pluralLabel>
</CustomObject>