force-app/main/default/objects/COMM_ContactUsEmailMapping__mdt/fields/COMM_Airport__c.field-meta.xml
<CustomField>
    <fullName>COMM_Airport__c</fullName>
    <description>Filed with Airport Code.</description>
    <label>Airport</label>
    <length>3</length>
    <type>Text</type>
</CustomField>