force-app/main/default/objects/COMM_ContactUsEmailMapping__mdt/fields/COMM_Email__c.field-meta.xml
<CustomField>
    <fullName>COMM_Email__c</fullName>
    <description>Field with email address of the recipient.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>