force-app/main/default/objects/COMM_ContactUsEmailMapping__mdt/fields/COMM_Reason__c.field-meta.xml
<CustomField>
    <fullName>COMM_Reason__c</fullName>
    <description>Field with reason for the contact.</description>
    <label>Reason</label>
    <length>18</length>
    <type>Text</type>
</CustomField>